<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">WeatherView</string>
    <!--<string name="appbar_scrolling_view_behavior">WeatherView</string>
        스크롤링 behavior와 중복되서 우선 제거함 - JJW
    -->
    <string name="title_activity_airport_detail">AirportDetailActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">""</string>
    <string name="google_maps_api_key">APIKEY</string>

    <!--낙뢰정보-->
    <string name="thunderstroke_time">낙뢰시간</string>
    <string name="thunderstroke_position">관측지점</string>
    <string name="thunderstroke_lat">위도</string>
    <string name="thunderstroke_lon">경도</string>
    <string name="thunderstroke_strong">낙뢰강도</string>
    <string name="thunderstroke_type">낙뢰타입</string>

    <!--생활기상-->
    <string name="lifeweather_time">생활기상</string>
    <string name="lifeweather_region">지역:</string>
    <string name="lifeweather_type">식중독 지수</string>
    <string name="lifeweather_date">기준일자</string>

    <string name="weatherlife_area_search_hint">입력해주세요..</string>
    <string name="weatherlife_area_search_menu">검색</string>

    <string name="search_result">Search Result!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>


    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
</resources>
